--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 .App {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 95vmin;
   pointer-events: none;
 }
 
